Removed depracted newInstance() and logger setup, update libraries, added ISViewer